[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Level.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Prefabs/Player 1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Player 2.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=7]
size = 400
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.5, 293.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 518, 4.48154 )

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1Score" type="Label" parent="."]
margin_left = 384.0
margin_top = 32.0
margin_right = 609.0
margin_bottom = 502.0
rect_scale = Vector2( 0.134806, 0.120001 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Player2Score" type="Label" parent="."]
margin_left = 608.0
margin_top = 32.0
margin_right = 833.0
margin_bottom = 502.0
rect_scale = Vector2( 0.134806, 0.120001 )
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Right" type="Area2D" parent="."]
position = Vector2( 830, 1143 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 216, -840 )
shape = SubResource( 5 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -177, 1230 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 152, -927.5 )
shape = SubResource( 5 )

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 607 )
scale = Vector2( 1, 0.930067 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 508, -3.22567 )
shape = SubResource( 4 )

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 1, 0.9644 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 508, -5.51845 )
shape = SubResource( 4 )

[node name="Player 1" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 303 )

[node name="Player 2" parent="." instance=ExtResource( 5 )]
position = Vector2( 972, 303 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 303 )

[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Right" to="Ball" method="_on_Right_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Left" to="Ball" method="_on_Left_body_entered"]
